feat: implemented direct deployment to K8s